[gd_scene load_steps=6 format=3 uid="uid://c5urdwr4p7j41"]

[ext_resource type="Script" path="res://scripts/levels/level_9.gd" id="1_d7gcw"]
[ext_resource type="PackedScene" uid="uid://cst3b75p1mfpc" path="res://prefabs/world_environment.tscn" id="2_pq4ih"]
[ext_resource type="PackedScene" uid="uid://slug5iqsl8ee" path="res://prefabs/snake_board.tscn" id="3_8n3y5"]
[ext_resource type="PackedScene" uid="uid://cj8ebg2ro6kbg" path="res://prefabs/Tanks/pivot_tank.tscn" id="4_wvj7n"]
[ext_resource type="PackedScene" uid="uid://ccwxmuivtfncb" path="res://prefabs/Tanks/v_tank.tscn" id="5_nbtnx"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_d7gcw")

[node name="WorldEnvironment" parent="." instance=ExtResource("2_pq4ih")]

[node name="SnakeBoard" parent="." instance=ExtResource("3_8n3y5")]
unique_name_in_owner = true
position = Vector2(176, 192)

[node name="ColorRect3" type="ColorRect" parent="SnakeBoard"]
offset_right = 646.0
offset_bottom = 646.0
color = Color(1, 0, 1, 0.0196078)

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1000.0
offset_bottom = 1000.0
mouse_filter = 2
color = Color(0, 0.0627451, 0, 1)
metadata/_edit_lock_ = true

[node name="PivotTank" parent="." instance=ExtResource("4_wvj7n")]
unique_name_in_owner = true
position = Vector2(496, 512)
rotation = 3.14159

[node name="PivotTank2" parent="." instance=ExtResource("4_wvj7n")]
unique_name_in_owner = true
position = Vector2(496, 520)

[node name="VTank" parent="." instance=ExtResource("5_nbtnx")]
unique_name_in_owner = true
position = Vector2(464, 128)

[node name="VTank2" parent="." instance=ExtResource("5_nbtnx")]
unique_name_in_owner = true
position = Vector2(120, 320)
rotation = -1.5708

[node name="VTank3" parent="." instance=ExtResource("5_nbtnx")]
unique_name_in_owner = true
position = Vector2(912, 320)
rotation = 1.5708

[node name="VTank4" parent="." instance=ExtResource("5_nbtnx")]
unique_name_in_owner = true
position = Vector2(504, 896)
rotation = 3.14159
